# AutomaModela

./: .gitignore  LICENSE  README.md  log.txt  pyproject.toml  requirements.txt  setup.cfg  tox.ini
Notebooks/: AutomaModela Testing (Antworten).xlsx  Feedback.ipynb  SalesRecords.xlsx  all_elemts.bpmn  alldtypes.xlsx  beispiel.xlsx  bpmn.ipynb  exprfunc.ipynb  feedbacktables.ipynb  functionsredesign.ipynb  inkltest.bpmn  inkltest_bpmn.py  inktest.xlsx  loadingandsavingtest.bpmn  log.txt  new-bpmn-diagram.bpmn  output.xlsx  paralleltest.bpmn  sample.xlsx
UseCases/Example/: beispiel.xlsx  eine_sehr_gute_note.xlsx  eine_sehr_sehr_gute_note.xlsx  example_real.bpmn  example_real_bpmn.py  exampleoptimized.bpmn  exampleoptimized_bpmn.py
UseCases/ICR/: ICR_Example.xlsx  example_icr_usecase.xlsx  icr.bpmn  icr.xlsx  icr_bpmn.py
UseCases/ICREV/: counter.xlsx  example_icrev_usecase.xlsx  icrevfulldia.bpmn  icrevfulldia_bpmn.py  output_icrev.xlsx  testing_garbage.bpmn  testing_garbage_bpmn.py
UseCases/UserTest_Sales/: SalesRecords.xlsx  Store_Performance_2022.xlsx  salesrecords.bpmn  salesrecords_bpmn.py
paper/: MastersDoctoralThesis.cls  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc
paper/Abstracts/: english.tex  german.tex
paper/Appendices/: AppendixA.aux
paper/Chapters/: Chapter1.aux  Chapter1.tex
src/: app.py
src/AutomaModel.egg-info/: PKG-INFO  SOURCES.txt
src/BPMN/: BPMN_Component.py  BPMN_Engine.py  BPMN_Parser.py  CodeWriter.py  (+25 more)
tests/: conftest.py  test_nodes.py  test_parser.py
(+5 files in other folders)
