[metadata]
name = AutomaModel
description = Automation Modeling Language
author = Rostislav Iskandirov (oilyshelf)
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    nodes
install_requires =
    requests>=2
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

