[metadata]
name = AutomaModel
description = Automation Modeling Language with BPMN
author = Rostislav Iskandirov (oilyshelf)
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    BPMN
install_requires =
    pandas==1.4.1
    xmltodict==0.12.0

python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
BPMN = py.typed

[flake8]
max-line-length = 210
ignore = F821, F541, E999


